# Binary_Converter

./: README.md  pyproject.toml
src/binary_converter/: __init__.py  config.py
src/binary_converter/base/: converter.py
tests/: test_converter.py
